samples/_failures_safe/1761312055_7c4755_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9fa0d599.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_9fa0d599.c:186:23: error: expected ‘;’ at end of input
  186 |                 buffer
      |                       ^
      |                       ;
./samples/SAFE/__tmp_9fa0d599.c:186:17: error: expected declaration or statement at end of input
  186 |                 buffer
      |                 ^~~~~~
./samples/SAFE/__tmp_9fa0d599.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9fa0d599.c:186:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9fa0d599.c:186:17: error: expected declaration or statement at end of input
